# mesc

./: .gitignore  404.html  LICENSE-MIT  README.md  SPECIFICATION.md  cli.html  developer_resources.html  go.html  implementing_mesc.html  index.html  integrating_mesc.html  libraries.html  mesc_overview.html  mesc_tests.html  metadata.html  overrides.html  print.html  profiles.html  python.html  queries.html  quickstart.html  roadmap.html  rust.html  schema.json  searchindex.js  searchindex.json  setup.html  typescript.html  using_mesc.html  what_is_mesc.html  why_mesc.html
.github/workflows/: deploy-docs.yml  go.yml  python-tests.yml  release.yml  rust-tests.yml  typescript.yml
book/: README.md
book/src/: SUMMARY.md  creating_a_config.md  environment_variables.md  integrating_mesc.md  mesc_libraries.md  mesc_overview.md  overrides.md  profiles.md  python.md  quickstart.md  setting_up_mesc.md
cli/: CLI_IMPLEMENTED_IN_RUST_DIR.fyi  README.md
docs/: README.md  book.toml
docs/demos/: autocomplete.tape  basics.tape  tests.tape
docs/src/: SUMMARY.md  cli.md  developer_resources.md  go.md  implementing_mesc.md  libraries.md  mesc_overview.md  mesc_tests.md  metadata.md  overrides.md  queries.md  quickstart.md  roadmap.md  rust.md  setup.md  typescript.md  using_mesc.md  what_is_mesc.md  why_mesc.md
go/: README.md  go.mod  go.sum
go/cmd/: cli.go
go/pkg/mesc/: endpoints.go  endpoints_test.go  env.go  env_test.go  mesc_suite_test.go
go/pkg/mesc/endpoint/criteria/: config.go
go/pkg/mesc/endpoint/io/serialization/: example.test_json  json.go  json_test.go
go/pkg/mesc/endpoint/resolution/: config.go
go/pkg/mesc/model/: chain_id.go  chain_id_test.go  endpoint_metadata.go  metadata.go  profile.go  rpc_config.go
python/: README.md  generate_network_names.py  pyproject.toml
python/mesc/: __init__.py  directory.py  exceptions.py  interface.py  load.py  network_names.py  network_utils.py  overrides.py  queries.py  read.py  types.py  validation.py
rust/: Cargo.toml  README.md
rust/crates/mesc/: Cargo.toml
rust/crates/mesc/src/: directory.rs  interface.rs  lib.rs  load.rs  metadata.rs  network_names.rs  overrides.rs  queries.rs  query.rs  types.rs  validate.rs  write.rs
rust/crates/mesc/src/types/: chain_ids.rs  configs.rs  errors.rs  mod.rs  queries.rs
rust/crates/mesc_cli/: Cargo.toml
rust/crates/mesc_cli/src/: cli.rs  find.rs  main.rs  metadata.rs  network.rs  ping.rs  printing.rs  rpc.rs  setup.rs  status.rs  types.rs
rust/crates/mesc_cli/src/cli/: args.rs  mod.rs
rust/crates/mesc_cli/src/cli/subcommands/: defaults.rs  endpoint.rs  find.rs  help.rs  import.rs  ls.rs  metadata.rs  mod.rs  ping.rs  set.rs  setup.rs  status.rs  url.rs
rust/crates/mesc_cli/src/cli/subcommands/setup/: command.rs  config_modification.rs  defaults.rs  endpoints.rs  inquire_utils.rs  metadata.rs  mod.rs  network_names.rs  selectors.rs  shell_config.rs  writing.rs
tests/: README.md  conftest.py  generate.py  go.work  run.py  test.py  test_mesc.py
tests/adapters/: cli  golang  python
typescript/: .env.example  .npmrc  README.md  biome.json  bun.lockb  environment.d.ts  package.json  reset.d.ts  tsconfig.json  tsup.config.ts
typescript/src/: env.ts  errors.ts  index.ts  networks.ts  parsers.ts  transform.ts  types.ts  utilities.ts
typescript/src/env/: index.ts  parsers.ts  schema.ts
typescript/src/schemas/: mesc-config.ts  mesc-configuration.ts  rpc-config.ts
typescript/test/: index.test.ts
wasm/: bun.lockb  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
wasm/mesc-wasm/: Cargo.toml
wasm/mesc-wasm/src/: lib.rs
wasm/public/: package.json
wasm/src/: index.ts
