[package]
name = "mesc_cli"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "mesc"
path = "src/main.rs"

[dependencies]
mesc = { version = "0.1.0", path = "../mesc" }
clap = { version = "4.4.8", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
inquire = "0.6.2"
