[package]
name = "mesc_cli"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "mesc"
path = "src/main.rs"

[dependencies]
mesc = { version = "0.1.0", path = "../mesc" }
clap = { version = "4.4.8", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
inquire = "0.6.2"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.29"
toolstr = { version = "0.1.0", path = "../../../../toolstr/toolstr-rust" }
edit = "0.1.4"
url = "2.2.2"
ipgeolocate = "0.3.6"
colored_json = "4.1.0"
