[package]
name = "mesc_cli"
description = "command line interface for creating, loading, and modifying MESC configuration data"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "mesc"
path = "src/main.rs"

[dependencies]
bat = "0.24.0"
clap = { version = "4.4.8", features = ["derive"] }
colored_json = "4.1.0"
edit = "0.1.4"
futures = "0.3.29"
inquire = "0.6.2"
ipgeolocate = "0.3.6"
mesc = { version = "0.2.0", path = "../mesc" }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.32.0", features = ["full"] }
toolstr = { version = "0.1.3" }
url = "2.2.2"
